# xiangxinai-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_ZH.md  pyproject.toml
.github/workflows/: publish.yml
src/xiangxinai/: __init__.py  client.py  exceptions.py  models.py  py.typed
